[package]
name = "rusted-ring"
version = "0.5.4"
edition = "2024"
description = "LMAX inspired Lock-free ring buffers with cache-aligned memory pools for high-performance event systems"
license = "MPL-2.0"
repository = "https://github.com/blockxaero/rusted-ring"
keywords = ["ringbuffer", "lockfree", "memory-pool", "performance", "zero-copy"]
categories = ["concurrency", "memory-management", "data-structures"]

[lib]

[dependencies]
bytemuck = "1.23.1"
thiserror = "2.0.12"


[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[profile.release]
debug = true  # Keep debug info for profiling
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
lto = true
codegen-units = 1